[package]
name = "khulan"
version = "0.1.0"
edition = "2021"

[features]
content_folder = ["tokio"]
robots_txt = ["rocket"]
sitemap_xml = ["rocket"]
default = ["content_folder", "robots_txt", "sitemap_xml"]

[dependencies]
rocket = { version = "*", optional = true}
tokio = { version = "*", optional = true }