[package]
name = "khulan"
version = "0.1.0"
edition = "2021"

[features]
kirby = ["tokio", "yaml-rust"]
robots_txt = ["rocket"]
sitemap_xml = ["rocket"]
multi_language = []
default = ["multi_language", "kirby", "robots_txt", "sitemap_xml"]

[dependencies]
rocket = { version = "*", optional = true }
tokio = { version = "*", optional = true }
yaml-rust = { version = "*", optional = true }
url = "*"
maplit = "*"